fscMigration/force-app/main/default/objects/Object_setup__c/fields/Destination_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Destination_Object_Name__c</fullName>
    <label>Destination Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>