fscMigration/force-app/main/default/objects/Object_setup__c/fields/SalesforceOrg__c.field-meta.xml
<CustomField>
    <fullName>SalesforceOrg__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>SalesforceOrg</label>
    <referenceTo>SalesforceOrg__c</referenceTo>
    <relationshipLabel>Object setups</relationshipLabel>
    <relationshipName>Object_setups</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>