fscMigration/force-app/main/default/objects/Object_setup__c/fields/Souce_Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Souce_Object_Api_Name__c</fullName>
    <externalId>true</externalId>
    <label>Souce Object Api Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>